@@ -19,9 +19,6 @@
     <artifactId>maven-surefire-plugin</artifactId>
     <version>3.1.2</version>
     				<configuration>
-					<forkCount>3</forkCount>
-					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 					<suiteXmlFiles>
 						<suiteXmlFile>./Para.xml</suiteXmlFile>
 					</suiteXmlFiles>
